@@ -7,6 +7,7 @@
         "ftbquests",
         "hoglin",
         "immersiveengineering",
+        "infinitehorizons",
         "kubejs",
         "lootcrate",
         "mysticalagriculture",
